Table users {
  id uuid [pk]
  name varchar(255) [not null]
  blocked boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table user_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id] 
  token varchar(512) [unique, not null]
  revoked boolean [default: false]
  created_at timestamp [default: `now()`]
  expires_at timestamp
}

Table folders {
  id uuid [pk]
  name varchar(255) [not null]
  parent_id uuid [ref: > folders.id, null]
  owner_id uuid [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table files {
  id uuid [pk]
  name varchar(255) [not null]
  folder_id uuid [not null, ref: > folders.id]
  size bigint
  checksum_sha256 varchar(64)
  mime_type varchar(128)
  storage_key varchar(512)
  created_at timestamp [default: `now()`]
}

Table roles {
  id serial [pk]
  name varchar(32) [not null]
  note varchar(512)
}

Table folder_access {
  folder_id uuid [not null, ref: > folders.id]
  user_id uuid [not null, ref: > users.id]
  role_id int [not null, ref: > roles.id]
  indexes {
    (folder_id, user_id) [pk]
  }
}
